<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriend"
    android:padding="8dp"
    android:background="@color/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rootView"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                >
                <ImageButton
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:scaleType="center"
                    android:id="@+id/choosedPhoto"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/accent"
                    android:src="@drawable/photo_icon"
                    />
            </androidx.cardview.widget.CardView>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/name_layout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Дополнительные данные"
                android:textSize="16sp"
                android:textColor="@color/text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tg_button"
                    android:layout_margin="6dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ig_button"
                    android:layout_margin="6dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_button"
                    android:layout_margin="6dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_input"
                    android:layout_margin="6dp"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/tg_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tg_input"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/ig_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editIgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ig_input"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/call_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCallNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/call_input"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/card_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_input"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:backgroundTint="@color/accent"
                app:elevation="4dp"
                android:layout_margin="2dp"
                android:padding="12dp"
                app:cornerRadius="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_date"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:id="@+id/birthDatePick"/>
        </LinearLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_friend"
        android:id="@+id/buttonAdd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:backgroundTint="@color/accent"
        android:textColor="@color/text"
        android:layout_margin="12dp"/>

</RelativeLayout>