<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.EditActivity"
    android:padding="8dp"
    android:background="@color/background"
    android:animateLayoutChanges="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                >
                <ImageButton
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:scaleType="center"
                    android:id="@+id/editPhoto"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/accent"
                    android:src="@drawable/photo_icon"
                    />
            </androidx.cardview.widget.CardView>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/edit_name_layout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tg_button"
                    android:layout_margin="6dp"
                    android:id="@+id/edit_hasTg"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ig_button"
                    android:layout_margin="6dp"
                    android:id="@+id/edit_hasIg"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_button"
                    android:layout_margin="6dp"
                    android:id="@+id/edit_hasCall"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_input"
                    android:layout_margin="6dp"
                    android:id="@+id/edit_hasCard"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/edit_tg_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_editTgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tg_input"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/edit_ig_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_editIgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ig_input"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/edit_call_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_editCallNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/call_input"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_margin="2dp"
                android:id="@+id/edit_card_layout"
                android:visibility="gone"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_editCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_input"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:backgroundTint="@color/accent"
                app:elevation="4dp"
                android:layout_margin="2dp"
                android:padding="12dp"
                app:cornerRadius="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_date"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:id="@+id/edit_birthDatePick"/>
        </LinearLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Delete"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_toStartOf="@id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/accent"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/text" />

</RelativeLayout>