<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/parent_of_list"
        android:background="@color/secondary"
        android:weightSum="12">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="35dp"
            android:layout_margin="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/photo"
                android:scaleType="center"
                android:contentDescription="@string/person_image"
                android:src="@drawable/photo_icon_mini"
                android:layout_gravity="center" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/name"
                android:textSize="18sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/text"
                android:layout_marginTop="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tgButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:backgroundTint="@color/tg_accent"
                        android:gravity="center|center_vertical"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:text="@string/tg_button"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:cornerRadius="6dp"
                        app:icon="@drawable/tgicon"
                        app:iconGravity="textStart"
                        app:iconTint="@null"
                        android:layout_weight="1"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/callButton"
                        android:layout_width="0dp"
                        android:layout_margin="3dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/call_accent"
                        android:gravity="center|center_vertical"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:text="@string/call_button"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:cornerRadius="6dp"
                        app:icon="@drawable/vector"
                        app:iconGravity="textStart"
                        app:iconTint="@null"
                        android:layout_weight="1"/>


                </LinearLayout>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/igButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="#FFFFFF"
                        android:gravity="center|center_vertical"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:text="@string/ig_button"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:cornerRadius="6dp"
                        app:icon="@drawable/instagram"
                        app:iconGravity="textStart"
                        app:iconTint="@null"
                        android:layout_weight="1"/>



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cardButton"
                        android:layout_width="0dp"
                        android:layout_margin="2dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/card_accent"
                        android:gravity="center|center_vertical"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:text="@string/card_button"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:cornerRadius="6dp"
                        app:icon="@drawable/yandex"
                        app:iconGravity="textStart"
                        app:iconTint="@null"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/counter"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:textSize="18sp"
                android:background="@drawable/counter_bg"
                android:gravity="center"
                android:textColor="@color/text"
                android:text="213d:21h:23m:31s"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>